--- a/game_logs/templates/paginas/index.html
+++ b/game_logs/templates/paginas/index.html
@@ -14,6 +14,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <style>
+      @import url(/static/css/variaveis.css);
+main{
+    background-image: url(/static/images/fundo-espaco.jpg);
+    background-size: 100% 100%;
+}
+.container-principal{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+#botao-jogar{
+    display: flex;
+    background-color: #e47911;
+    width: 15em;
+    height: 2.8em;
+    justify-content: center;
+    align-items: center;
+    color: var(--branco);
+    text-decoration: none;
+    font-weight: 800;
+    font-size: 2em;
+}
+
+#botao-jogar:hover{
+    background-color: #fa8611;
+    color: #000;
+}
+
+#container-titulo{
+    padding-top: 2em;
+    text-align: center;
+}
+#titulo{
+    color: var(--branco);
+    font-weight: 800;
+    font-size: 3em;
+}
+
+    </style>
   </head>
   <body>
     <nav class="container-nav">
